// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropDownComponents <AggregationLevel/> matches the snapshot 1`] = `
<DropDown
  label="Aggregation Level"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "Sum",
        "value": "SUM",
      },
      Object {
        "label": "Average",
        "value": "AVERAGE",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <Category/> matches the snapshot 1`] = `
<DropDown
  label="Category"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "Favorite views",
        "subtitle": "Number of times users looked at analysis favorites",
        "value": "FAVORITE_VIEWS",
      },
      Object {
        "label": "Favorites saved",
        "subtitle": "Number of analysis favorites created by users",
        "value": "FAVORITES_SAVED",
      },
      Object {
        "label": "Users",
        "subtitle": "Number of users in the system",
        "value": "USERS",
      },
      Object {
        "label": "Top favorites",
        "value": "TOP_FAVORITES",
      },
      Object {
        "label": "Data values",
        "subtitle": "Number of data values saved in the system",
        "value": "DATA_VALUES",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <ChartType/> matches the snapshot 1`] = `
<DropDown
  label="Chart Type"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "All",
        "value": "ALL",
      },
      Object {
        "label": "Total",
        "value": "TOTAL",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <EventType/> matches the snapshot 1`] = `
<DropDown
  label="Event Type"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "Chart",
        "value": "CHART_VIEW",
      },
      Object {
        "label": "Map",
        "value": "MAP_VIEW",
      },
      Object {
        "label": "Report table",
        "value": "REPORT_TABLE_VIEW",
      },
      Object {
        "label": "Event report",
        "value": "EVENT_REPORT_VIEW",
      },
      Object {
        "label": "Event chart",
        "value": "EVENT_CHART_VIEW",
      },
      Object {
        "label": "Dashboard",
        "value": "DASHBOARD_VIEW",
      },
      Object {
        "label": "Data set report",
        "value": "DATA_SET_REPORT_VIEW",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <Interval/> matches the snapshot 1`] = `
<DropDown
  label="Interval"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "Day",
        "value": "DAY",
      },
      Object {
        "label": "Week",
        "value": "WEEK",
      },
      Object {
        "label": "Month",
        "value": "MONTH",
      },
      Object {
        "label": "Year",
        "value": "YEAR",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <PageSize/> matches the snapshot 1`] = `
<DropDown
  label="Page Size"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "5",
        "value": "5",
      },
      Object {
        "label": "10",
        "value": "10",
      },
      Object {
        "label": "15",
        "value": "15",
      },
      Object {
        "label": "20",
        "value": "20",
      },
      Object {
        "label": "25",
        "value": "25",
      },
    ]
  }
  value="test"
/>
`;

exports[`dropDownComponents <SortOrder/> matches the snapshot 1`] = `
<DropDown
  label="Sort Order"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "Ascending",
        "value": "ASC",
      },
      Object {
        "label": "Descending",
        "value": "DESC",
      },
    ]
  }
  value="test"
/>
`;
